# editorconfig-core-vimscript

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CTestCustom.cmake  LICENSE.BSD  README.md  appveyor.yml  echoargs.bat  echoargs.vbs  ecunit  ecunit.bat  ecunit1.vbs  ecunit2.ps1  ecvbslib.vbs  ecvimlib.ps1  editorconfig  editorconfig-old.bat  editorconfig.bat  editorconfig.ps1  editorconfig1.vbs  editorconfig2.ps1  fetch-vim.bat  fetch-vim.sh  get-raw-args.ps1  pstest.bat  pstest.ps1  runtest.sh  vbstest.bat
autoload/: editorconfig_core.vim
autoload/editorconfig_core/: fnmatch.vim  handler.vim  ini.vim  util.vim
globtests/: CMakeLists.txt
localtests/: CMakeLists.txt
localtests/abcd/: CMakeLists.txt
localtests/abcd/glob/: CMakeLists.txt
localtests/glob/: CMakeLists.txt
plugin/: editorconfig_core.vim
unittests/: CMakeLists.txt
unittests/glob/: CMakeLists.txt
